<resources>
    <string name="app_name">App Compra y Venta</string>

    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_vender">Vender</string>
    <string name="Mis_Anuncios">Mis Anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>
    <string name="Item_Mis_Anuncios">Mis Anuncios</string>

    <string name="default_web_client_id">532434749092-60nuaft6hjdbu3h19t6k7r5c1tgju2tt.apps.googleusercontent.com</string>


    <string name="TituloRL">Titulo</string>

    <string name="Ingresar_email">Ingresar con email</string>
    <string name="Ingresar_google">Ingresar con Google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar"> Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>


    <string name="Txt_registro">Registro de usuario"</string>
    <string name="Et_r_password">Repeat Password</string>
    <string name="Btn_registrar">Registrarme</string>


    <!-- Perfil de usuario -->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Infomación: </string>
    <string name="Txt_nombres">Nombres: </string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Email: </string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nac.: </string>
    <string name="Tv_nacimiento">DD/MM/AAAA</string>
    <string name="Txt_miembro">Miembro desde: </string>
    <string name="Tv_miembro">DD/MM/AAAA</string>
    <string name="Txt_telefono">Teléfono: </string>
    <string name="Tv_telefono">0123456789</string>
    <string name="Txt_estado_cuenta">Estado de cuenta: </string>
    <string name="Tv_estado_cuenta">No verificado</string>

    <string name="TxtOpciones">0pciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>

    <string name="Btn_cerrar_sesion">Cerrar Sesion</string>

    <string name="Txt_editar_perfial">Editar Perfil</string>
    <string name="Et_nombres">Nombres completos</string>
    <string name="Et_f_nac">Fecha de nac.</string>
    <string name="Cod_tef">+00</string>
    <string name="Et_telefono">Telefono</string>
    <string name="Btn_actualizar">Actualizar</string>

    <string name="Et_marca">Marca</string>
    <string name="Categoria">Categoría</string>
    <string name="Condicion">Condición</string>
    <string name="Locacion">Locación</string>
    <string name="Et_precio">Precio</string>
    <string name="Et_titulo">Título</string>
    <string name="Et_descripcion">Descripción</string>
    <string name="Btn_crear_anuncio">Crear anuncio</string>

    <string name="item_uid">Uid</string>
    <string name="item_nombre">Nombre</string>
    <string name="item_email">Email</string>
    <string name="tvSinUsuarios">No hay más usuarios</string>
    <string name="Et_buscar_usuario">Buscar Usuario</string>

    <string name="Txt_nombre_usuario">Nombres</string>
    <string name="Et_mensaje_chat">Escriba algo</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>




    <string name="Et_nombre">Nombres completos</string>

</resources>