<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item_imagen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_imagen_perfil" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_uid"
                android:visibility="gone" />

            <TextView
                android:id="@+id/item_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_nombre"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_email" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/item_noleidos"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/badge_background"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>