<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_editar"
            android:text="@string/Txt_editar_perfial"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp" />

        <!-- Imagen Perfil -->
        <RelativeLayout
            android:layout_below="@+id/Txt_editar"
            android:id="@+id/perfilRL"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_perfil"
                android:scaleType="centerCrop"
                android:src="@drawable/img_perfil" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABCambiarImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                app:fabCustomSize="40dp"
                app:maxImageSize="24dp"
                app:srcCompat="@drawable/ic_selec_imagen" />


        </RelativeLayout>

        <!-- Nombres -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/TILNombres"
            android:layout_height="wrap_content"
            android:layout_below="@+id/perfilRL"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <EditText
                android:id="@+id/Et_Nombres"
                android:hint="@string/Et_nombres"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Pais -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TILNombres"
            android:layout_marginTop="10dp"
            android:id="@+id/RLSelectorCod">

            <com.hbb20.CountryCodePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SelectorCod"
                android:gravity="center" />

        </RelativeLayout>

        <!-- Telefono -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TelefonoNac"
            android:layout_toEndOf="@id/RLSelectorCod"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            android:layout_below="@id/TILNombres"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <EditText
                android:id="@+id/Et_Telefono"
                android:hint="@string/Et_telefono"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Fecha de Nacimiento -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/TILFechaNac"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TelefonoNac"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <EditText
                android:id="@+id/Et_fecha"
                android:hint="@string/Et_f_nac"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"
            android:id="@+id/Btn_actualizar"
            android:text="@string/Btn_actualizar"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:layout_below="@id/TILFechaNac"
            android:layout_marginTop="15dp"
            app:icon="@drawable/ic_editar" />


    </RelativeLayout>

</RelativeLayout>